--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -38,7 +38,7 @@
 
     </FrameLayout>
 
-    <com.technoqueue.utils.MSPTextViewBold
+    <com.technoqueue.utils.TextViewBold
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/f1_header_image" />
 
-    <com.technoqueue.utils.MSPTextView
+    <com.technoqueue.utils.TextView
         android:id="@+id/tv_title_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title_description" >
 
-        <com.technoqueue.utils.MSPEditText
+        <com.technoqueue.utils.EditText
             android:id="@+id/et_forgot_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -84,7 +84,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.technoqueue.utils.MSPButton
+    <com.technoqueue.utils.Button
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
