Successfully added products, validating products and uploading them to Firebase cloud storage

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="colorLightGrey">#F1F1F1</color>
     <color name="colorBorder">#E8E6E6</color>
     <color name="colorDarkGrey">#878787</color>
+    <color name="colorImageViewBackground">#E1E1E1</color>
+
+    <color name="colorOffWhite">#F8F8F8</color>
 </resources>
