--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -52,4 +52,7 @@
     <dimen name="settings_lbl_addresses_textSize">18sp</dimen>
     <dimen name="settings_button_marginStartEnd">50dp</dimen>
     <dimen name="settings_button_marginTopBottom">16dp</dimen>
+    <dimen name="add_product_header_image_height">250dp</dimen>
+    <dimen name="add_update_product_icon_padding">16dp</dimen>
+    <dimen name="no_data_found_textSize">20sp</dimen>
 </resources>
