--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="colorImageViewBackground">#E1E1E1</color>
 
     <color name="colorOffWhite">#F8F8F8</color>
+    <color name="item_value_text_color">#545353</color>
+
+    <color name="dashboard_item_details_bg">#F3F3F3</color>
 </resources>
