--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_vector_products"
         android:title="@string/title_orders" />
 
+    <item
+        android:id="@+id/hi"
+        android:icon="@drawable/ic_vector_sold_products"
+        android:title="@string/title_sold_products" />
+
 </menu>
