App functioning well and fine excellent work done

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
         android:title="@string/title_orders" />
 
     <item
-        android:id="@+id/hi"
+        android:id="@+id/navigation_sold_products"
         android:icon="@drawable/ic_vector_sold_products"
         android:title="@string/title_sold_products" />
 
