--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -179,7 +179,7 @@
                 app:layout_constraintTop_toBottomOf="@id/til_mobile_number">
 
                 <com.technoqueue.utils.RadioButton
-                    android:id="@+id/rb_male"
+                    android:id="@+id/rb_customer"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
@@ -188,12 +188,12 @@
                     android:button="@null"
                     android:checked="true"
                     android:gravity="center"
-                    android:text="@string/rb_lbl_male"
+                    android:text="Customer"
                     android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                     android:textStyle="bold" />
 
                 <com.technoqueue.utils.RadioButton
-                    android:id="@+id/rb_female"
+                    android:id="@+id/rb_vendor"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
@@ -201,7 +201,7 @@
                     android:background="@drawable/drawable_gender_tab_selector"
                     android:button="@null"
                     android:gravity="center"
-                    android:text="@string/rb_lbl_female"
+                    android:text="Vendor"
                     android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                     android:textStyle="bold" />
             </RadioGroup>
