Insert customer-vendor option

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".ui.fragments.DashboardFragment">
+    tools:context=".ui.fragments.WelcomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_dashboard_items"
