--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".ui.fragments.ProductsFragment">
+    tools:context=".ui.fragments.MenuFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_my_product_items"
