--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_welcome"
         android:icon="@drawable/ic_vector_dashboard"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_welcome" />
 
     <item
-        android:id="@+id/navigation_products"
+        android:id="@+id/navigation_menu"
         android:icon="@drawable/ic_vector_products"
-        android:title="@string/title_products" />
+        android:title="@string/title_menu" />
 
     <item
         android:id="@+id/navigation_orders"
