--- a/app/src/main/res/layout/activity_add_edit_store.xml
+++ b/app/src/main/res/layout/activity_add_edit_store.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.EditStorefrontActivity">
+    tools:context=".ui.activities.AddEditStoreActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_edit_storefront_activity"
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:paddingStart="@dimen/toolbar_title_paddingStart"
             android:paddingEnd="0dp"
-            android:text="Edit Storefront"
+            android:text="@string/edit_store_description"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/toolbar_title_text_size"
             android:textStyle="bold" />
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content">
 
             <FrameLayout
-                android:id="@+id/fl_product_image"
+                android:id="@+id/fl_store_image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/add_product_header_image_height"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
                     android:scaleType="fitXY" />
 
                 <ImageView
-                    android:id="@+id/iv_add_update_product"
+                    android:id="@+id/iv_add_update_store"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|bottom"
@@ -71,7 +71,7 @@
             </FrameLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_product_title"
+                android:id="@+id/til_store_title"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,10 +82,10 @@
                 android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fl_product_image">
+                app:layout_constraintTop_toBottomOf="@id/fl_store_image">
 
                 <com.technoqueue.utils.EditText
-                    android:id="@+id/et_product_title"
+                    android:id="@+id/et_store_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -106,10 +106,10 @@
                 android:textColorHint="@color/colorSecondaryText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/til_product_title">
+                app:layout_constraintTop_toBottomOf="@id/til_store_title">
 
                 <com.technoqueue.utils.EditText
-                    android:id="@+id/et_product_description"
+                    android:id="@+id/et_store_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
