--- a/app/src/main/res/layout/item_store_layout.xml
+++ b/app/src/main/res/layout/item_store_layout.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -42,7 +41,7 @@
         android:paddingBottom="@dimen/dashboard_item_paddingTopBottom">
 
         <com.technoqueue.utils.TextViewBold
-            android:id="@+id/tv_dashboard_item_title"
+            android:id="@+id/tv_storeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/item_value_text_color"
@@ -50,14 +49,5 @@
             android:textStyle="bold"
             tools:text="Item Name" />
 
-        <com.technoqueue.utils.TextView
-            android:id="@+id/tv_dashboard_item_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dashboard_item_price_marginTop"
-            android:textColor="@color/item_value_text_color"
-            android:textSize="@dimen/dashboard_item_textSize"
-            android:textStyle="bold"
-            tools:text="$100.00" />
     </LinearLayout>
 </RelativeLayout>
