--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -57,97 +57,13 @@
                 android:id="@+id/rv_cart_list_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_product_items"
-                android:layout_marginTop="-20dp" />
-
-            <com.technoqueue.utils.TextView
-                android:id="@+id/tv_selected_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rv_cart_list_items"
-                android:layout_marginStart="@dimen/checkout_content_marginStartEnd"
-                android:layout_marginTop="@dimen/checkout_content_marginTopBottom"
-                android:layout_marginEnd="@dimen/checkout_content_marginStartEnd"
-                android:layout_marginBottom="@dimen/checkout_content_marginTopBottom"
-                android:paddingTop="@dimen/checkout_content_lbl_padding"
-                android:paddingBottom="@dimen/checkout_content_lbl_padding"
-                android:text="@string/checkout_lbl_selected_address"
-                android:textColor="@color/colorSecondaryText"
-                android:textSize="@dimen/checkout_lbl_textSize" />
-
-            <LinearLayout
-                android:id="@+id/ll_checkout_address_details"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_selected_address"
-                android:background="@color/colorWhite"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/checkout_content_paddingStartEnd"
-                android:paddingTop="@dimen/checkout_content_paddingTopBottom"
-                android:paddingEnd="@dimen/checkout_content_paddingStartEnd"
-                android:paddingBottom="@dimen/checkout_content_paddingTopBottom">
-
-                <com.technoqueue.utils.TextView
-                    android:id="@+id/tv_checkout_address_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/address_details_marginTop"
-                    android:paddingBottom="@dimen/address_details_marginTop"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/address_details_textSize"
-                    android:textStyle="bold"
-                    tools:text="Home" />
-
-                <com.technoqueue.utils.TextViewBold
-                    android:id="@+id/tv_checkout_full_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/item_address_name_textSize"
-                    tools:text="Denis Panjuta" />
-
-                <com.technoqueue.utils.TextView
-                    android:id="@+id/tv_checkout_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/address_details_marginTop"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/address_details_textSize"
-                    tools:text="XYZ" />
-
-                <com.technoqueue.utils.TextView
-                    android:id="@+id/tv_checkout_additional_note"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/address_details_marginTop"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/address_details_textSize"
-                    tools:text="XYZ" />
-
-                <com.technoqueue.utils.TextView
-                    android:id="@+id/tv_checkout_other_details"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/address_details_marginTop"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/address_details_textSize"
-                    tools:text="XYZ" />
-
-                <com.technoqueue.utils.TextView
-                    android:id="@+id/tv_checkout_mobile_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/address_details_marginTop"
-                    android:textColor="@color/item_value_text_color"
-                    android:textSize="@dimen/address_details_textSize"
-                    tools:text="+64 123456789" />
-            </LinearLayout>
+                android:layout_below="@id/tv_product_items" />
 
             <com.technoqueue.utils.TextView
                 android:id="@+id/tv_items_receipt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/ll_checkout_address_details"
+                android:layout_below="@+id/rv_cart_list_items"
                 android:layout_marginStart="@dimen/checkout_content_marginStartEnd"
                 android:layout_marginTop="@dimen/checkout_content_marginTopBottom"
                 android:layout_marginEnd="@dimen/checkout_content_marginStartEnd"
@@ -165,52 +81,6 @@
                 android:background="@color/colorWhite"
                 android:orientation="vertical"
                 android:padding="@dimen/ll_checkout_items_receipt">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.technoqueue.utils.TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/lbl_subtotal"
-                        android:textColor="@color/colorDarkGrey"
-                        android:textSize="@dimen/checkout_label_value_textSize" />
-
-                    <com.technoqueue.utils.TextView
-                        android:id="@+id/tv_checkout_sub_total"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorSecondaryText"
-                        android:textSize="@dimen/checkout_label_value_textSize"
-                        tools:text="$100" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.technoqueue.utils.TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/lbl_shipping_charge"
-                        android:textColor="@color/colorDarkGrey"
-                        android:textSize="@dimen/checkout_label_value_textSize" />
-
-                    <com.technoqueue.utils.TextView
-                        android:id="@+id/tv_checkout_shipping_charge"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorSecondaryText"
-                        android:textSize="@dimen/checkout_label_value_textSize"
-                        tools:text="$10.0" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
