--- a/app/src/main/res/layout/activity_sold_product_details.xml
+++ b/app/src/main/res/layout/activity_sold_product_details.xml
@@ -239,6 +239,30 @@
                         tools:text="$110" />
                 </LinearLayout>
             </LinearLayout>
+
+            <com.technoqueue.utils.Button
+                android:id="@+id/btn_complete_order"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background"
+                android:foreground="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:paddingTop="@dimen/btn_padding"
+                android:paddingBottom="@dimen/btn_padding"
+                android:text="COMPLETE ORDER"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/btn_textSize"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_sold_product_total_amount"
+                tools:visibility="visible" />
+
         </LinearLayout>
     </ScrollView>
 
